// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.dsid.testes";
option java_outer_classname = "DSIDProto";
option objc_class_prefix = "HLW";

package testes;

// Definição do serviço.
service DsidServico {
  // Envia String
  rpc SayString (StringRequest) returns (StringReply) {}
  // Envia void
  rpc SayVoid (VoidRequest) returns (VoidReply) {}
  // Envia long
  rpc SayLong (LongRequest) returns (LongReply) {}
  // Envia vários long
  rpc SayVarLong (VarLongRequest) returns (VarLongReply) {}
  // Envia pessoa
  rpc SayPerson (Person) returns (PersonReply) {}
  // Envia array de pessoas
  rpc SayVarPerson (VarPerson) returns (VarPersonReply) {}
}

message StringRequest {
  string name = 1;
}

message StringReply {
  string message = 1;
}

message LongRequest {
  int64 reqLong= 1;
}

message LongReply {
  int64 replyLong = 1;
}

message VoidRequest {
}

message VoidReply {
}

message VarLongRequest {
  repeated int64 reqLongArray = 1;
}

message VarLongReply {
  repeated int64 replyLongArray = 1;
}

message Person {
  string name = 1;
  string email = 2;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }

  repeated PhoneNumber phones = 3;
}

message PersonReply{
  int32 id = 1;
  string name = 2;

  enum Status {
    CADASTRADO = 0;
    NAOCADASTRADO = 1;
  }
  Status stat = 3;
}

message VarPerson{
  repeated Person arrayPerson = 1;
}

message VarPersonReply{
  repeated PersonReply arrayPersonReply = 1;
}
